# kbo-cli

./: Cargo.toml  README.md
.github/deploy/: build_aarch64-apple-darwin.sh  build_x86_64-apple-darwin.sh
.github/workflows/: build_artifacts.yml  check_version.yml  make_release.yml
src/: cli.rs  main.rs  vcf_writer.rs
